moved all the gesture logic into a separate TU

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -22,6 +22,7 @@ sway_sources = files(
 
 	'input/input-manager.c',
 	'input/cursor.c',
+	'input/touch_gestures.c',
 	'input/keyboard.c',
 	'input/libinput.c',
 	'input/seat.c',
